objects/CN_Change_Request__c.object
<CustomObject>
    <fields>
        <fullName>CN_Customer_Status__c</fullName>
        <label>Customer Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Sleep</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Delivery_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivery Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CN_Finance_AR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance AR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests_Finance_AR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_From_Lead_Id__c</fullName>
        <label>From Lead Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_From_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Incoterms__c</fullName>
        <label>Incoterms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CFR</fullName>
                    <label>CFR-Costs and freight</label>
                </value>
                <value>
                    <fullName>CIF</fullName>
                    <label>CIF-Costs, insurance &amp; freight</label>
                </value>
                <value>
                    <fullName>CIP</fullName>
                    <label>CIP-Carriage and insurance paid to</label>
                </value>
                <value>
                    <fullName>CPT</fullName>
                    <label>CPT-Carriage paid to</label>
                </value>
                <value>
                    <fullName>DAF</fullName>
                    <label>DAF-Delivered at frontier</label>
                </value>
                <value>
                    <fullName>DDP</fullName>
                    <label>DDP-Delivered Duty Paid</label>
                </value>
                <value>
                    <fullName>DDU</fullName>
                    <label>DDU-Delivered Duty Unpaid</label>
                </value>
                <value>
                    <fullName>DEQ</fullName>
                    <label>DEQ-Delivered ex quay (duty paid)</label>
                </value>
                <value>
                    <fullName>DES</fullName>
                    <label>DES-Delivered ex ship</label>
                </value>
                <value>
                    <fullName>EXW</fullName>
                    <label>EXW-Ex Works</label>
                </value>
                <value>
                    <fullName>FAS</fullName>
                    <label>FAS-Free Alongside Ship</label>
                </value>
                <value>
                    <fullName>FCA</fullName>
                    <label>FCA-Free Carrier</label>
                </value>
                <value>
                    <fullName>FH</fullName>
                    <label>FH-Free house</label>
                </value>
                <value>
                    <fullName>FOB</fullName>
                    <label>FOB-Free on board</label>
                </value>
                <value>
                    <fullName>UN</fullName>
                    <label>UN-Not Free</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Indicator_Record_Payment_History__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Indicator: Record Payment History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Invoice_Info_Same_As_Sold_To_Party__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice info Same as Sold-to Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Invoicing_Address_CN__c</fullName>
        <label>Invoicing Address(CN)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Is_Auto_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Auto Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Generate_From_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Generate From Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Loyalty_Level__c</fullName>
        <label>Loyalty Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_New_Account_Customer_Type__c</fullName>
        <label>New Account Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0001</fullName>
                    <label>0001-Sold to party</label>
                </value>
                <value>
                    <fullName>0002</fullName>
                    <label>0002-Goods Receipt</label>
                </value>
                <value>
                    <fullName>CPDA</fullName>
                    <label>CPDA-Onetime Customer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_New_Account_Status__c</fullName>
        <label>New Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Ready for Approval</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_New_Acct_assgmt_group__c</fullName>
        <label>New Acct assgmt group</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_New_Actual_sales_volume__c</fullName>
        <label>New Actual sales volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_New_Address__c</fullName>
        <label>New Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_New_Billing_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Billing Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_New_Billing_Contact_Name_CN_Last_Name__c</fullName>
        <label>New Billing Contact Name(CN)-Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_New_Billing_Contact_Name_EN__c</fullName>
        <label>New Billing Contact Name(EN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_New_Billing_Contact_Name_First_Name__c</fullName>
        <label>New Billing Contact Name(CN)-First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_New_Billing_Email__c</fullName>
        <label>New Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CN_New_Billing_Mobile_Phone__c</fullName>
        <inlineHelpText>Please enter the number in the format of 1XXXXXXXXXX or XXX-XXXXXXXX or XXXX-XXXXXXXX-XXX (X is number).</inlineHelpText>
        <label>New Billing Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CN_New_Billing_Phone_Number__c</fullName>
        <inlineHelpText>Please enter the number in the format of 1XXXXXXXXXX or XXX-XXXXXXXX or XXXX-XXXXXXXX-XXX (X is number).</inlineHelpText>
        <label>New Billing Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CN_New_Block_Sales_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Block Sales Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_New_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_New_Country_CN__c</fullName>
        <label>New Country(CN)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>中国</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_New_Cust_Stats_Grp__c</fullName>
        <label>New Cust.Stats.Grp</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_New_Cust_pric_proc__c</fullName>
        <label>New Cust.pric.proc.</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_New_Customer_Code__c</fullName>
        <label>New Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_New_Customer_Name__c</fullName>
        <label>New Customer Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_New_Customer_Status__c</fullName>
        <label>New Customer Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Sleep</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_New_Delivery_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Delivery Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_New_Incoterms__c</fullName>
        <label>New Incoterms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CFR</fullName>
                    <label>CFR-Costs and freight</label>
                </value>
                <value>
                    <fullName>CIF</fullName>
                    <label>CIF-Costs, insurance &amp; freight</label>
                </value>
                <value>
                    <fullName>CIP</fullName>
                    <label>CIP-Carriage and insurance paid to</label>
                </value>
                <value>
                    <fullName>CPT</fullName>
                    <label>CPT-Carriage paid to</label>
                </value>
                <value>
                    <fullName>DAF</fullName>
                    <label>DAF-Delivered at frontier</label>
                </value>
                <value>
                    <fullName>DDP</fullName>
                    <label>DDP-Delivered Duty Paid</label>
                </value>
                <value>
                    <fullName>DDU</fullName>
                    <label>DDU-Delivered Duty Unpaid</label>
                </value>
                <value>
                    <fullName>DEQ</fullName>
                    <label>DEQ-Delivered ex quay (duty paid)</label>
                </value>
                <value>
                    <fullName>DES</fullName>
                    <label>DES-Delivered ex ship</label>
                </value>
                <value>
                    <fullName>EXW</fullName>
                    <label>EXW-Ex Works</label>
                </value>
                <value>
                    <fullName>FAS</fullName>
                    <label>FAS-Free Alongside Ship</label>
                </value>
                <value>
                    <fullName>FCA</fullName>
                    <label>FCA-Free Carrier</label>
                </value>
                <value>
                    <fullName>FH</fullName>
                    <label>FH-Free house</label>
                </value>
                <value>
                    <fullName>FOB</fullName>
                    <label>FOB-Free on board</label>
                </value>
                <value>
                    <fullName>UN</fullName>
                    <label>UN-Not Free</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_New_Indicator_Record_Payment_History__c</fullName>
        <defaultValue>true</defaultValue>
        <label>New Indicator: Record Payment History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_New_Invoice_info_Same_as_Sold_toParty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Invoice info Same as Sold-to Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_New_Invoicing_Address_CN__c</fullName>
        <label>New Invoicing Address(CN)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_New_Loyalty_level__c</fullName>
        <label>New Loyalty level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_New_Order_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Order Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_New_Order_Combination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Order Combination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_New_Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Change Requests (New Parent Account)</relationshipLabel>
        <relationshipName>Change_Requests6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_New_Post_Code__c</fullName>
        <label>New Post Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_New_Price_determination__c</fullName>
        <defaultValue>true</defaultValue>
        <label>New Price determination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_New_Purchasing_Contact_Name_EN__c</fullName>
        <label>New Purchasing Contact Name(EN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_New_Purchasing_Contact_Name_FirstName__c</fullName>
        <label>New Purchasing Contact Name-First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_New_Purchasing_Contact_Name_Last_Name__c</fullName>
        <label>New Purchasing Contact Name-Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_New_Purchasing_Email__c</fullName>
        <label>New Purchasing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CN_New_Purchasing_Mobile_Phone__c</fullName>
        <label>New Purchasing Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CN_New_Purchasing_Phone_Number__c</fullName>
        <inlineHelpText>Please enter the number in the format of 1XXXXXXXXXX or XXX-XXXXXXXX or XXXX-XXXXXXXX-XXX (X is number).</inlineHelpText>
        <label>New Purchasing Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CN_New_Rebat__c</fullName>
        <defaultValue>true</defaultValue>
        <label>New Rebat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_New_Region__c</fullName>
        <label>New Region</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_New_SAP_Customer_Code__c</fullName>
        <label>New SAP Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_New_SAP_ID__c</fullName>
        <label>New SAP ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_New_SF_Customer_Code__c</fullName>
        <label>New SF Customer Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CN_New_Sales_Office__c</fullName>
        <label>New Sales Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>K010</fullName>
                    <label>K010-ShangHai</label>
                </value>
                <value>
                    <fullName>K020</fullName>
                    <label>K020-BeiJing</label>
                </value>
                <value>
                    <fullName>K030</fullName>
                    <label>K030-ShenZhen</label>
                </value>
                <value>
                    <fullName>K040</fullName>
                    <label>K040-GuangZhou</label>
                </value>
                <value>
                    <fullName>K050</fullName>
                    <label>K050-ChengDu</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_New_Sales_Org__c</fullName>
        <label>New Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>S010</fullName>
                    <label>S010-Sinodis Sales Org</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_New_Sales_Person_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Sales Person Name</label>
        <referenceTo>CN_Internal_Employee__c</referenceTo>
        <relationshipLabel>Change Requests (New Sales Person Name)</relationshipLabel>
        <relationshipName>Change_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_New_Search_Term__c</fullName>
        <label>New Search Term</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_New_Ship_To_Party_Customer_Type__c</fullName>
        <label>New Ship To Party Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0001</fullName>
                    <label>0001-Sold to party</label>
                </value>
                <value>
                    <fullName>0002</fullName>
                    <label>0002-Goods Receipt</label>
                </value>
                <value>
                    <fullName>CPDA</fullName>
                    <label>CPDA-Onetime Customer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_New_Shipping_Condition__c</fullName>
        <label>New Shipping Condition</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_New_Tax_classification__c</fullName>
        <label>New Tax classification</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_New_Terms_of_Payment_in_Billing__c</fullName>
        <label>New Terms of Payment in Billing</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_New_Transportation_Zone__c</fullName>
        <label>New Transportation Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0000000001</fullName>
                    <label>CN-0000000001-Normal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_New_UP_code__c</fullName>
        <label>New UP code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_New_Upload_Bank_Information_FaPiao__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Upload Bank Information/FaPiao</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_New_Upload_Business_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Upload Business License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_New_Upload_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Upload Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_New_Upload_Hygiene_Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Upload Hygiene Certificate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_New_Uploading_Points__c</fullName>
        <label>New Uploading Points</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Order_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Order_Combination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Combination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Change Requests (Parent Account)</relationshipLabel>
        <relationshipName>Change_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Please_Confirm__c</fullName>
        <formula>CASE(
TEXT(CN_Change_Request_Status__c ),
&quot;New&quot;,  $Label.CN_PleaseConfirm_Value_BackToNew ,
&quot;Ready for Approval&quot;, $Label.CN_PleaseConfirm_Value_ReadyForApproval,
&quot;Submitted for Approval&quot;, $Label.CN_PleaseConfirm_Value_AlreadySubmitted,
$Label.CN_PleaseConfirm_Value_AlreadySubmitted
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Please Confirm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Post_Code__c</fullName>
        <label>Post Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Price_Determination__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Price determination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Purchasing_Contact_Name_CN_First_Name__c</fullName>
        <label>Purchasing Contact Name(CN)-First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Purchasing_Contact_Name_CN_Last_Name__c</fullName>
        <label>Purchasing Contact Name(CN)-Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Purchasing_Contact_Name_EN__c</fullName>
        <label>Purchasing Contact Name(EN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Purchasing_Email__c</fullName>
        <label>Purchasing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CN_Purchasing_Mobile_Phone__c</fullName>
        <inlineHelpText>Please enter the number in the format of 1XXXXXXXXXX or XXX-XXXXXXXX or XXXX-XXXXXXXX-XXX (X is number).</inlineHelpText>
        <label>Purchasing Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CN_Purchasing_Phone_Number__c</fullName>
        <inlineHelpText>Please enter the number in the format of 1XXXXXXXXXX or XXX-XXXXXXXX or XXXX-XXXXXXXX-XXX (X is number).</inlineHelpText>
        <label>Purchasing Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CN_Rebat__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Rebat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Record_Type__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Region__c</fullName>
        <label>Region</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_SAP_Customer_Code__c</fullName>
        <label>SAP Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_SAP_ID__c</fullName>
        <label>SAP ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_SF_Customer_Code__c</fullName>
        <label>SF Customer Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Office__c</fullName>
        <label>Sales Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>K010</fullName>
                    <label>K010-ShangHai</label>
                </value>
                <value>
                    <fullName>K020</fullName>
                    <label>K020-BeiJing</label>
                </value>
                <value>
                    <fullName>K030</fullName>
                    <label>K030-ShenZhen</label>
                </value>
                <value>
                    <fullName>K040</fullName>
                    <label>K040-GuangZhou</label>
                </value>
                <value>
                    <fullName>K050</fullName>
                    <label>K050-ChengDu</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Sales_Org__c</fullName>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>S010</fullName>
                    <label>S010-Sinodis Sales Org</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Sales_Person_Name_API__c</fullName>
        <formula>CN_Sales_Person_Name__r.CN_User_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Person Name API</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Person_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person Name</label>
        <referenceTo>CN_Internal_Employee__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Search_Term__c</fullName>
        <label>Search Term</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_ShipTo_Account_Name__c</fullName>
        <formula>New_CN_ShipTo_Sold_To_Party_Customer__r.Name</formula>
        <label>ShipTo Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_ShipTo_City_CN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>City(CN)</label>
        <referenceTo>CN_City__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_ShipTo_Contact_Name__c</fullName>
        <label>ShipTo Contact Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_ShipTo_Customer_Name_EN__c</fullName>
        <label>Ship To Name(EN)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_ShipTo_Customer_Name__c</fullName>
        <label>Ship To Name(CN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_ShipTo_Delivery_Address_CN__c</fullName>
        <label>ShipTo Delivery Address(CN)</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_ShipTo_Delivery_Address_EN__c</fullName>
        <label>ShipTo Delivery Address(EN)</label>
        <length>220</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_ShipTo_Delivery_Plant__c</fullName>
        <label>ShipTo Delivery Plant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P011</fullName>
                    <label>P011-SINODIS ShangHai External-西诺迪斯（上海） 外部</label>
                </value>
                <value>
                    <fullName>P020</fullName>
                    <label>P020-SINODIS BeiJing-西诺迪斯（北京）</label>
                </value>
                <value>
                    <fullName>P040</fullName>
                    <label>P040-SINODIS GuangZhou-西诺迪斯（广州）</label>
                </value>
                <value>
                    <fullName>P050</fullName>
                    <label>P050-SINODIS Chengdu-西诺迪斯（成都）</label>
                </value>
                <value>
                    <fullName>P060</fullName>
                    <label>P060-SINODIS Dalian-西诺迪斯（大连）</label>
                </value>
                <value>
                    <fullName>P010</fullName>
                    <isActive>false</isActive>
                    <label>P010-SINODIS ShangHai-西诺迪斯（上海）</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_ShipTo_Indirect_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ShipTo Indirect Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Change Requests (Indirect Account)</relationshipLabel>
        <relationshipName>Change_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_ShipTo_Mobile_Phone__c</fullName>
        <inlineHelpText>Please enter the number in the format of 1XXXXXXXXXX or XXX-XXXXXXXX or XXXX-XXXXXXXX-XXX (X is number).</inlineHelpText>
        <label>ShipTo Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CN_ShipTo_Province_CN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Province(CN)</label>
        <referenceTo>CN_Province__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_ShipTo_Sold_To_Party_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold-to Party Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Change Requests (Sold-to Party Customer Code)</relationshipLabel>
        <relationshipName>Change_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_ShipTo_Telephone__c</fullName>
        <inlineHelpText>Please enter the number in the format of 1XXXXXXXXXX or XXX-XXXXXXXX or XXXX-XXXXXXXX-XXX (X is number).</inlineHelpText>
        <label>ShipTo Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CN_Ship_To_Party_Customer_Type__c</fullName>
        <label>Ship To Party Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0001</fullName>
                    <label>0001-Sold to party</label>
                </value>
                <value>
                    <fullName>0002</fullName>
                    <default>true</default>
                    <label>0002-Goods Receipt</label>
                </value>
                <value>
                    <fullName>CPDA</fullName>
                    <label>CPDA-Onetime Customer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>